--- a/trunk/plugins/__homedir/CMakeLists.txt
+++ b/trunk/plugins/__homedir/CMakeLists.txt
@@ -3,14 +3,19 @@
 #####################
 PROJECT(__homedir)
 
+#conditional sources
+IF(WIN32)
+	SET (homedircfg_SRC homedircfg.cpp)
+ENDIF(WIN32)
+
 SET(__homedir_LIB_SRCS
         homedir.cpp
-        homedircfg.cpp
+	${homedircfg_SRC}
 )
 
-SET(__homedir_UI_FILES
-        homedircfgbase.ui
-)
+IF (WIN32)
+	SET(__homedir_UI_FILES homedircfgbase.ui)
+ENDIF(WIN32)
 
 # moc, if needed
 KDE3_AUTOMOC(${__homedir_LIB_SRCS})
