--- a/trunk/plugins/about/CMakeLists.txt
+++ b/trunk/plugins/about/CMakeLists.txt
@@ -25,5 +25,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(about simlib)
 
+SET_TARGET_PROPERTIES(about PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS about LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
