--- a/trunk/plugins/gpg/CMakeLists.txt
+++ b/trunk/plugins/gpg/CMakeLists.txt
@@ -35,5 +35,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}})
 
 TARGET_LINK_LIBRARIES(gpg simlib)
 
+SET_TARGET_PROPERTIES(gpg PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS gpg LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
