--- a/trunk/plugins/jabber/CMakeLists.txt
+++ b/trunk/plugins/jabber/CMakeLists.txt
@@ -53,6 +53,8 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(jabber simlib)
 
+SET_TARGET_PROPERTIES(jabber PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS jabber LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
