--- a/trunk/plugins/sms/CMakeLists.txt
+++ b/trunk/plugins/sms/CMakeLists.txt
@@ -28,6 +28,8 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}
 
 TARGET_LINK_LIBRARIES(sms simlib)
 
+SET_TARGET_PROPERTIES(sms PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS sms LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
