--- a/trunk/plugins/styles/metal/CMakeLists.txt
+++ b/trunk/plugins/styles/metal/CMakeLists.txt
@@ -17,5 +17,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(metal simlib)
 
+SET_TARGET_PROPERTIES(metal PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS metal LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
