--- a/trunk/plugins/background/CMakeLists.txt
+++ b/trunk/plugins/background/CMakeLists.txt
@@ -25,5 +25,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(background simlib)
 
+SET_TARGET_PROPERTIES(background PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS background LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
