--- a/trunk/plugins/dock/CMakeLists.txt
+++ b/trunk/plugins/dock/CMakeLists.txt
@@ -26,5 +26,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(dock simlib)
 
+SET_TARGET_PROPERTIES(dock PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS dock LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
