--- a/trunk/plugins/floaty/CMakeLists.txt
+++ b/trunk/plugins/floaty/CMakeLists.txt
@@ -18,5 +18,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(floaty simlib)
 
+SET_TARGET_PROPERTIES(floaty PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS floaty LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
