--- a/trunk/plugins/forward/CMakeLists.txt
+++ b/trunk/plugins/forward/CMakeLists.txt
@@ -25,5 +25,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(forward simlib)
 
+SET_TARGET_PROPERTIES(forward PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS forward LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
