--- a/trunk/plugins/icons/CMakeLists.txt
+++ b/trunk/plugins/icons/CMakeLists.txt
@@ -25,5 +25,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(icons simlib)
 
+SET_TARGET_PROPERTIES(icons PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS icons LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
