--- a/trunk/plugins/icq/CMakeLists.txt
+++ b/trunk/plugins/icq/CMakeLists.txt
@@ -80,6 +80,8 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(icq simlib)
 
+SET_TARGET_PROPERTIES(icq PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS icq LIBRARY DESTINATION {SIM_PLUGIN_DIR} RUNTIME DESTINATION ${SIM_PLUGIN_DIR})
 
