--- a/trunk/plugins/logger/CMakeLists.txt
+++ b/trunk/plugins/logger/CMakeLists.txt
@@ -25,5 +25,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(logger simlib)
 
+SET_TARGET_PROPERTIES(logger PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS logger LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
