--- a/trunk/plugins/netmonitor/CMakeLists.txt
+++ b/trunk/plugins/netmonitor/CMakeLists.txt
@@ -18,5 +18,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(netmonitor simlib)
 
+SET_TARGET_PROPERTIES(netmonitor PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS netmonitor LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
