--- a/trunk/plugins/proxy/CMakeLists.txt
+++ b/trunk/plugins/proxy/CMakeLists.txt
@@ -25,8 +25,10 @@ ADD_LIBRARY(proxy SHARED ${proxy_LIB_SRCS})
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}
                     ${CMAKE_BINARY_DIR}/plugins/_core)
-                    
+
 TARGET_LINK_LIBRARIES(proxy simlib)
+
+SET_TARGET_PROPERTIES(proxy PROPERTIES PREFIX "")
 
 # install target
 INSTALL(TARGETS proxy LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
