--- a/trunk/plugins/shortcuts/CMakeLists.txt
+++ b/trunk/plugins/shortcuts/CMakeLists.txt
@@ -27,5 +27,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(shortcuts simlib)
 
+SET_TARGET_PROPERTIES(shortcuts PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS shortcuts LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
