--- a/trunk/plugins/styles/CMakeLists.txt
+++ b/trunk/plugins/styles/CMakeLists.txt
@@ -30,5 +30,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(styles simlib)
 
+SET_TARGET_PROPERTIES(styles PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS styles LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
