--- a/trunk/plugins/styles/wood/CMakeLists.txt
+++ b/trunk/plugins/styles/wood/CMakeLists.txt
@@ -17,5 +17,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(wood simlib)
 
+SET_TARGET_PROPERTIES(wood PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS wood LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
