--- a/trunk/plugins/transparent/CMakeLists.txt
+++ b/trunk/plugins/transparent/CMakeLists.txt
@@ -30,5 +30,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 TARGET_LINK_LIBRARIES(transparent simlib)
 
+SET_TARGET_PROPERTIES(transparent PROPERTIES PREFIX "")
+
 # install target
 INSTALL(TARGETS transparent LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
