the dll can't be named sim.dll, it *must* be simlib.dll add libeax32 on win32 because we need it

--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -50,7 +50,7 @@ ADD_FLEX_FILES(sim_LIB_SRCS html.ll)
 
 # our target
 ADD_LIBRARY(simlib SHARED ${sim_LIB_SRCS})
-SET_TARGET_PROPERTIES(simlib PROPERTIES OUTPUT_NAME sim VERSION 0.0.0 SOVERSION 0)
+SET_TARGET_PROPERTIES(simlib PROPERTIES OUTPUT_NAME simlib VERSION 0.0.0 SOVERSION 0)
 
 #some needed defines
 ADD_DEFINITIONS(-DSIMAPI_EXPORTS -DNOUNCRYPT)
@@ -62,6 +62,24 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 if(OPENSSL_FOUND)
   INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
   TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES})
+  # we need libeay here too...
+  # FIXME: move this somehow to FindOpenSSL.cmake...
+  IF(WIN32)
+    IF(MSVC)
+      IF(MSVC_IDE)
+        TARGET_LINK_LIBRARIES(simlib optimized libeay32MD debug libeay32MDd)
+      ELSE(MSVC_IDE)
+        STRING(TOLOWER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE_TOLOWER)
+       IF(CMAKE_BUILD_TYPE_TOLOWER MATCHES debug)
+          TARGET_LINK_LIBRARIES(simlib libeay32MDd)
+        ELSE(CMAKE_BUILD_TYPE_TOLOWER MATCHES debug)
+          TARGET_LINK_LIBRARIES(simlib libeay32MD)
+        ENDIF(CMAKE_BUILD_TYPE_TOLOWER MATCHES debug)
+      ENDIF(MSVC_IDE)
+    ELSE(MSVC)
+      TARGET_LINK_LIBRARIES(simlib libeay32)
+    ENDIF(MSVC)
+  ENDIF(WIN32)
 endif(OPENSSL_FOUND)
 
 IF(USE_KDE3)
