Compile transparent plugin only for win32 or KDE

--- a/trunk/plugins/transparent/CMakeLists.txt
+++ b/trunk/plugins/transparent/CMakeLists.txt
@@ -1,36 +1,40 @@
 #######################
 # transparent library #
 #######################
-PROJECT(transparent)
+IF(WIN32||USE_KDE3)
+	PROJECT(transparent)
 
-SET(transparent_LIB_SRCS
-        transparent.cpp
-        transparentcfg.cpp
-)
+	SET(transparent_LIB_SRCS
+        	transparent.cpp
+	        transparentcfg.cpp
+	)
 
-SET(transparent_UI_FILES
-        transparentcfgbase.ui
-)
+	SET(transparent_UI_FILES
+        	transparentcfgbase.ui
+	)
 
-IF(NOT WIN32)
-    SET(transparent_LIB_SRCS ${transparent_LIB_SRCS}
-        transtop.cpp)
-ENDIF(NOT WIN32)
+	IF(NOT WIN32)
+	    SET(transparent_LIB_SRCS ${transparent_LIB_SRCS}
+        	transtop.cpp)
+	ENDIF(NOT WIN32)
 
-# moc, if needed
-KDE3_AUTOMOC(${transparent_LIB_SRCS})
+	# moc, if needed
+	KDE3_AUTOMOC(${transparent_LIB_SRCS})
 
-# don't forget our ui's
-QT3_ADD_UI_FILES(transparent_LIB_SRCS ${transparent_UI_FILES})
+	# don't forget our ui's
+	QT3_ADD_UI_FILES(transparent_LIB_SRCS ${transparent_UI_FILES})
 
-ADD_LIBRARY(transparent SHARED ${transparent_LIB_SRCS})
+	ADD_LIBRARY(transparent SHARED ${transparent_LIB_SRCS})
 
-# some needed include dirs
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
+	# some needed include dirs
+	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
-TARGET_LINK_LIBRARIES(transparent simlib)
+	TARGET_LINK_LIBRARIES(transparent simlib)
 
-SET_TARGET_PROPERTIES(transparent PROPERTIES PREFIX "")
+	SET_TARGET_PROPERTIES(transparent PROPERTIES PREFIX "")
 
-# install target
-INSTALL(TARGETS transparent LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+	# install target
+	INSTALL(TARGETS transparent LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+ELSE(WIN32||USE_KDE3)
+	MESSAGE(STATUS "This plugin can only be used on windows or KDE")
+ENDIF(WIN32||USE_KDE3)
