Set postfix for sim library on windows to "lib" Christian: on *nix default prefix for library targets is "lib", on windows it is ""

--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -50,7 +50,12 @@ ADD_FLEX_FILES(sim_LIB_SRCS html.ll)
 
 # our target
 ADD_LIBRARY(simlib SHARED ${sim_LIB_SRCS})
-SET_TARGET_PROPERTIES(simlib PROPERTIES OUTPUT_NAME simlib VERSION 0.0.0 SOVERSION 0)
+
+SET_TARGET_PROPERTIES(simlib PROPERTIES OUTPUT_NAME sim VERSION 0.0.0 SOVERSION 0)
+
+IF(WIN32)
+	SET_TARGET_PROPERTIES(simlib PROPERTIES POSTFIX "lib")
+ENDIF(WIN32)
 
 #some needed defines
 ADD_DEFINITIONS(-DSIMAPI_EXPORTS -DNOUNCRYPT)
