Fix compilation with KDE

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -35,6 +35,7 @@ IF(NOT WIN32)
     INCLUDE(FindKDE3)
     IF(KDE3_FOUND)
         OPTION(USE_KDE3 "Use kde3 integration" YES)
+        INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS})
     ENDIF(KDE3_FOUND)
 ENDIF(NOT WIN32)
 
