--- a/trunk/plugins/icq/CMakeLists.txt
+++ b/trunk/plugins/icq/CMakeLists.txt
@@ -83,7 +83,7 @@ TARGET_LINK_LIBRARIES(icq simlib)
 SET_TARGET_PROPERTIES(icq PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS icq LIBRARY DESTINATION {SIM_PLUGIN_DIR} RUNTIME DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS icq LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME DESTINATION ${SIM_PLUGIN_DIR})
 
 # install some sounds
 INSTALL(FILES sounds/mailpager.wav DESTINATION ${SIM_SOUND_DIR})
