search for aspell (optional) and iconv (needed, at least on win32) libsim: don't know why, but need to define target properties this way

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -26,8 +26,10 @@ ENDIF(NOT QT_FOUND)
 FIND_PACKAGE(Qt3 REQUIRED)
 FIND_PACKAGE(LibXml2 REQUIRED)
 FIND_PACKAGE(LibXslt REQUIRED)
+FIND_PACKAGE(LibIconv REQUIRED)    # at least on win32 - dunno know about linux
 
 # optional packages
+FIND_PACKAGE(ASpell)
 FIND_PACKAGE(OpenSSL)
 INCLUDE(FindX11)
 
@@ -38,6 +40,9 @@ IF(NOT WIN32)
         INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS})
     ENDIF(KDE3_FOUND)
 ENDIF(NOT WIN32)
+
+# do config checks
+INCLUDE(ConfigureChecks.cmake)
 
 MACRO_BOOL_TO_01(OPENSSL_FOUND USE_OPENSSL)
 MACRO_BOOL_TO_01(X11_FOUND HAVE_X)
@@ -71,5 +76,4 @@ ADD_SUBDIRECTORY(sim)
 SIM_INCLUDE_PLUGINS()
 
 # create config.h
-INCLUDE(ConfigureChecks.cmake)
 CONFIGURE_FILE(config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
