--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -51,10 +51,10 @@ ADD_FLEX_FILES(sim_LIB_SRCS html.ll)
 # our target
 ADD_LIBRARY(simlib SHARED ${sim_LIB_SRCS})
 
-SET_TARGET_PROPERTIES(simlib PROPERTIES OUTPUT_NAME sim VERSION 0.0.0 SOVERSION 0)
-
 IF(WIN32)
-	SET_TARGET_PROPERTIES(simlib PROPERTIES POSTFIX "lib")
+    SET_TARGET_PROPERTIES(simlib PROPERTIES VERSION 0.0.0 SOVERSION 0)
+ELSE(WIN32)
+    SET_TARGET_PROPERTIES(simlib PROPERTIES OUTPUT_NAME sim VERSION 0.0.0 SOVERSION 0)
 ENDIF(WIN32)
 
 #some needed defines
@@ -98,9 +98,9 @@ if (WIN32)
   TARGET_LINK_LIBRARIES(simlib wsock32)
 endif(WIN32)
 
-# libxml, libxslt and zlib
-INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${LIBXSLT_INCLUDE_DIR} ${ZLIB_INCLUDE_DIR})
-TARGET_LINK_LIBRARIES(simlib ${QT_QTMAIN_LIBRARY} ${QT_QT_LIBRARY} ${LIBXML2_LIBRARIES} ${LIBXSLT_LIBRARIES})
+# libxml, libxslt and iconv
+INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${LIBXSLT_INCLUDE_DIR} ${LIBICONV_INCLUDE_DIR})
+TARGET_LINK_LIBRARIES(simlib ${QT_QT_LIBRARY} ${LIBXML2_LIBRARIES} ${LIBXSLT_LIBRARIES} ${LIBICONV_LIBRARIES})
 
 # set correct install path
 INSTALL(TARGETS simlib LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
@@ -113,7 +113,7 @@ INSTALL(TARGETS simlib LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME DESTI
 ADD_EXECUTABLE(sim WIN32 sim.cpp sim.rc)
 
 # only needs simlib
-TARGET_LINK_LIBRARIES(sim simlib)
+TARGET_LINK_LIBRARIES(sim simlib ${QT_QTMAIN_LIBRARY})
 
 # set correct install path
 INSTALL(TARGETS sim RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
