zlib is needed too (linking against zlib is not really needed because Qt has internal zlib support in standard config - but this is the better way)

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -27,6 +27,7 @@ FIND_PACKAGE(Qt3 REQUIRED)
 FIND_PACKAGE(LibXml2 REQUIRED)
 FIND_PACKAGE(LibXslt REQUIRED)
 FIND_PACKAGE(LibIconv REQUIRED)    # at least on win32 - dunno know about linux
+FIND_PACKAGE(ZLIB REQUIRED)
 
 # optional packages
 FIND_PACKAGE(ASpell)
