add Aspell include dir and library

--- a/trunk/plugins/spell/CMakeLists.txt
+++ b/trunk/plugins/spell/CMakeLists.txt
@@ -27,9 +27,9 @@ IF(ASPELL_FOUND)
     ADD_LIBRARY(spell SHARED ${spell_LIB_SRCS})
 
     # some needed include dirs
-    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
+    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${ASPELL_INCLUDE_DIR})
 
-    TARGET_LINK_LIBRARIES(spell simlib)
+    TARGET_LINK_LIBRARIES(spell simlib ${ASPELL_LIBRARIES})
 
     SET_TARGET_PROPERTIES(spell PROPERTIES PREFIX "")
 
