add dependencies to _core for proxy and sms

--- a/trunk/plugins/proxy/CMakeLists.txt
+++ b/trunk/plugins/proxy/CMakeLists.txt
@@ -30,5 +30,7 @@ TARGET_LINK_LIBRARIES(proxy simlib)
 
 SET_TARGET_PROPERTIES(proxy PROPERTIES PREFIX "")
 
+ADD_DEPENDENCIES(proxy _core)
+
 # install target
 INSTALL(TARGETS proxy LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
