--- a/trunk/plugins/sms/CMakeLists.txt
+++ b/trunk/plugins/sms/CMakeLists.txt
@@ -33,5 +33,7 @@ SET_TARGET_PROPERTIES(sms PROPERTIES PREFIX "")
 # install target
 INSTALL(TARGETS sms LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
+ADD_DEPENDENCIES(sms _core)
+
 # install some sounds
 INSTALL(FILES sounds/phone.wav DESTINATION ${SIM_SOUND_DIR})
