libiconv isn't needed on nix

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -26,8 +26,10 @@ ENDIF(NOT QT_FOUND)
 FIND_PACKAGE(Qt3 REQUIRED)
 FIND_PACKAGE(LibXml2 REQUIRED)
 FIND_PACKAGE(LibXslt REQUIRED)
-FIND_PACKAGE(LibIconv REQUIRED)    # at least on win32 - dunno know about linux
 FIND_PACKAGE(ZLIB REQUIRED)
+IF(WIN32)
+    FIND_PACKAGE(LibIconv REQUIRED)
+ENDIF(WIN32)
 
 # optional packages
 FIND_PACKAGE(ASpell)
