fix including FindASpell

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -32,7 +32,7 @@ IF(WIN32)
 ENDIF(WIN32)
 
 # optional packages
-FIND_PACKAGE(ASpell)
+FIND_PACKAGE(ASPELL)
 FIND_PACKAGE(OpenSSL)
 INCLUDE(FindX11)
 
