add LIBRARY DESTINATION for spell plugin

--- a/trunk/plugins/spell/CMakeLists.txt
+++ b/trunk/plugins/spell/CMakeLists.txt
@@ -34,7 +34,7 @@ IF(ASPELL_FOUND)
     SET_TARGET_PROPERTIES(spell PROPERTIES PREFIX "")
 
     # install target
-    INSTALL(TARGETS spell RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+    INSTALL(TARGETS spell LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME DESTINATION ${SIM_PLUGIN_DIR})
 
 ELSE(ASPELL_FOUND)
     MESSAGE(STATUS "Cannot build spell plugin because aspell is missing on your system")
