Fix UNIX plugins placement.
JFYI: when installing libraries on non-DLL targets, 
LIBRARY DESTINATION is used, and RUNTIME DESTINATION is ignored.

--- a/trunk/plugins/__migrate/CMakeLists.txt
+++ b/trunk/plugins/__migrate/CMakeLists.txt
@@ -28,4 +28,4 @@ TARGET_LINK_LIBRARIES(__migrate simlib)
 SET_TARGET_PROPERTIES(__migrate PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS __migrate LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS __migrate LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
