--- a/trunk/plugins/action/CMakeLists.txt
+++ b/trunk/plugins/action/CMakeLists.txt
@@ -33,4 +33,4 @@ TARGET_LINK_LIBRARIES(action simlib)
 SET_TARGET_PROPERTIES(action PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS action LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS action LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
