--- a/trunk/plugins/autoaway/CMakeLists.txt
+++ b/trunk/plugins/autoaway/CMakeLists.txt
@@ -28,7 +28,7 @@ TARGET_LINK_LIBRARIES(autoaway simlib)
 SET_TARGET_PROPERTIES(autoaway PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS autoaway LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS autoaway LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
 
 ###############################
@@ -49,5 +49,5 @@ IF(WIN32)
     TARGET_LINK_LIBRARIES(idleui simlib)
 
     # install target
-    INSTALL(TARGETS idleui LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+    INSTALL(TARGETS idleui LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 ENDIF(WIN32)
