--- a/trunk/plugins/background/CMakeLists.txt
+++ b/trunk/plugins/background/CMakeLists.txt
@@ -28,4 +28,4 @@ TARGET_LINK_LIBRARIES(background simlib)
 SET_TARGET_PROPERTIES(background PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS background LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS background LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
