--- a/trunk/plugins/gpg/CMakeLists.txt
+++ b/trunk/plugins/gpg/CMakeLists.txt
@@ -43,4 +43,4 @@ TARGET_LINK_LIBRARIES(gpg simlib)
 SET_TARGET_PROPERTIES(gpg PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS gpg LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS gpg LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
