--- a/trunk/plugins/icons/CMakeLists.txt
+++ b/trunk/plugins/icons/CMakeLists.txt
@@ -28,4 +28,4 @@ TARGET_LINK_LIBRARIES(icons simlib)
 SET_TARGET_PROPERTIES(icons PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS icons LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS icons LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
