--- a/trunk/plugins/jabber/CMakeLists.txt
+++ b/trunk/plugins/jabber/CMakeLists.txt
@@ -56,7 +56,7 @@ TARGET_LINK_LIBRARIES(jabber simlib)
 SET_TARGET_PROPERTIES(jabber PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS jabber LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS jabber LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
 # install some sounds
 INSTALL(FILES sounds/error.wav DESTINATION ${SIM_SOUND_DIR})
