--- a/trunk/plugins/navigate/CMakeLists.txt
+++ b/trunk/plugins/navigate/CMakeLists.txt
@@ -31,4 +31,4 @@ TARGET_LINK_LIBRARIES(navigate simlib)
 SET_TARGET_PROPERTIES(navigate PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS navigate LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS navigate LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
