--- a/trunk/plugins/proxy/CMakeLists.txt
+++ b/trunk/plugins/proxy/CMakeLists.txt
@@ -33,4 +33,4 @@ SET_TARGET_PROPERTIES(proxy PROPERTIES PREFIX "")
 ADD_DEPENDENCIES(proxy _core)
 
 # install target
-INSTALL(TARGETS proxy LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS proxy LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
