--- a/trunk/plugins/shortcuts/CMakeLists.txt
+++ b/trunk/plugins/shortcuts/CMakeLists.txt
@@ -30,4 +30,4 @@ TARGET_LINK_LIBRARIES(shortcuts simlib)
 SET_TARGET_PROPERTIES(shortcuts PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS shortcuts LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS shortcuts LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
