--- a/trunk/plugins/sms/CMakeLists.txt
+++ b/trunk/plugins/sms/CMakeLists.txt
@@ -31,7 +31,7 @@ TARGET_LINK_LIBRARIES(sms simlib)
 SET_TARGET_PROPERTIES(sms PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS sms LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS sms LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
 ADD_DEPENDENCIES(sms _core)
 
