--- a/trunk/plugins/styles/CMakeLists.txt
+++ b/trunk/plugins/styles/CMakeLists.txt
@@ -33,4 +33,4 @@ TARGET_LINK_LIBRARIES(styles simlib)
 SET_TARGET_PROPERTIES(styles PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS styles LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS styles LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
