--- a/trunk/plugins/styles/metal/CMakeLists.txt
+++ b/trunk/plugins/styles/metal/CMakeLists.txt
@@ -20,4 +20,4 @@ TARGET_LINK_LIBRARIES(metal simlib)
 SET_TARGET_PROPERTIES(metal PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS metal LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
+INSTALL(TARGETS metal LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
