--- a/trunk/plugins/styles/wood/CMakeLists.txt
+++ b/trunk/plugins/styles/wood/CMakeLists.txt
@@ -20,4 +20,4 @@ TARGET_LINK_LIBRARIES(wood simlib)
 SET_TARGET_PROPERTIES(wood PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS wood LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
+INSTALL(TARGETS wood LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR}/styles)
