--- a/trunk/plugins/transparent/CMakeLists.txt
+++ b/trunk/plugins/transparent/CMakeLists.txt
@@ -34,7 +34,7 @@ IF(WIN32 OR USE_KDE3)
 	SET_TARGET_PROPERTIES(transparent PROPERTIES PREFIX "")
 
 	# install target
-	INSTALL(TARGETS transparent LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+	INSTALL(TARGETS transparent LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 ELSE(WIN32 OR USE_KDE3)
 	MESSAGE(STATUS "This plugin can only be used on windows or KDE")
 ENDIF(WIN32 OR USE_KDE3)
