--- a/trunk/plugins/update/CMakeLists.txt
+++ b/trunk/plugins/update/CMakeLists.txt
@@ -22,6 +22,6 @@ TARGET_LINK_LIBRARIES(update simlib)
 SET_TARGET_PROPERTIES(update PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS update LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS update LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
 ENDIF(FALSE)
