--- a/trunk/plugins/weather/CMakeLists.txt
+++ b/trunk/plugins/weather/CMakeLists.txt
@@ -33,4 +33,4 @@ SET_TARGET_PROPERTIES(weather PROPERTIES PREFIX "")
 ADD_JISP_ARCHIVE(jisp weather.jisp)
 
 # install target
-INSTALL(TARGETS weather LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS weather LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
