--- a/trunk/plugins/zodiak/CMakeLists.txt
+++ b/trunk/plugins/zodiak/CMakeLists.txt
@@ -20,4 +20,4 @@ TARGET_LINK_LIBRARIES(zodiak simlib)
 SET_TARGET_PROPERTIES(zodiak PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS zodiak LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS zodiak LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
