--- a/trunk/plugins/__homedir/CMakeLists.txt
+++ b/trunk/plugins/__homedir/CMakeLists.txt
@@ -33,4 +33,4 @@ TARGET_LINK_LIBRARIES(__homedir simlib)
 SET_TARGET_PROPERTIES(__homedir PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS __homedir LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS __homedir LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
