--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -130,4 +130,4 @@ TARGET_LINK_LIBRARIES(_core simlib)
 SET_TARGET_PROPERTIES(_core PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS _core LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS _core LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
