--- a/trunk/plugins/about/CMakeLists.txt
+++ b/trunk/plugins/about/CMakeLists.txt
@@ -28,4 +28,4 @@ TARGET_LINK_LIBRARIES(about simlib)
 SET_TARGET_PROPERTIES(about PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS about LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS about LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
