--- a/trunk/plugins/dock/CMakeLists.txt
+++ b/trunk/plugins/dock/CMakeLists.txt
@@ -29,4 +29,4 @@ TARGET_LINK_LIBRARIES(dock simlib)
 SET_TARGET_PROPERTIES(dock PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS dock LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS dock LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
