--- a/trunk/plugins/filter/CMakeLists.txt
+++ b/trunk/plugins/filter/CMakeLists.txt
@@ -30,4 +30,4 @@ TARGET_LINK_LIBRARIES(filter simlib)
 SET_TARGET_PROPERTIES(filter PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS filter LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS filter LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
