--- a/trunk/plugins/floaty/CMakeLists.txt
+++ b/trunk/plugins/floaty/CMakeLists.txt
@@ -21,4 +21,4 @@ TARGET_LINK_LIBRARIES(floaty simlib)
 SET_TARGET_PROPERTIES(floaty PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS floaty LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS floaty LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
