--- a/trunk/plugins/forward/CMakeLists.txt
+++ b/trunk/plugins/forward/CMakeLists.txt
@@ -28,4 +28,4 @@ TARGET_LINK_LIBRARIES(forward simlib)
 SET_TARGET_PROPERTIES(forward PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS forward LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS forward LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
