--- a/trunk/plugins/livejournal/CMakeLists.txt
+++ b/trunk/plugins/livejournal/CMakeLists.txt
@@ -32,4 +32,4 @@ TARGET_LINK_LIBRARIES(livejournal simlib)
 SET_TARGET_PROPERTIES(livejournal PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS livejournal LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS livejournal LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
