--- a/trunk/plugins/logger/CMakeLists.txt
+++ b/trunk/plugins/logger/CMakeLists.txt
@@ -28,4 +28,4 @@ TARGET_LINK_LIBRARIES(logger simlib)
 SET_TARGET_PROPERTIES(logger PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS logger LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS logger LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
