--- a/trunk/plugins/msn/CMakeLists.txt
+++ b/trunk/plugins/msn/CMakeLists.txt
@@ -35,4 +35,4 @@ TARGET_LINK_LIBRARIES(msn simlib)
 SET_TARGET_PROPERTIES(msn PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS msn LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS msn LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
