--- a/trunk/plugins/netmonitor/CMakeLists.txt
+++ b/trunk/plugins/netmonitor/CMakeLists.txt
@@ -21,4 +21,4 @@ TARGET_LINK_LIBRARIES(netmonitor simlib)
 SET_TARGET_PROPERTIES(netmonitor PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS netmonitor LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS netmonitor LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
