--- a/trunk/plugins/ontop/CMakeLists.txt
+++ b/trunk/plugins/ontop/CMakeLists.txt
@@ -28,4 +28,4 @@ TARGET_LINK_LIBRARIES(ontop simlib)
 SET_TARGET_PROPERTIES(ontop PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS ontop LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS ontop LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
