--- a/trunk/plugins/osd/CMakeLists.txt
+++ b/trunk/plugins/osd/CMakeLists.txt
@@ -30,4 +30,4 @@ TARGET_LINK_LIBRARIES(osd simlib)
 SET_TARGET_PROPERTIES(osd PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS osd LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS osd LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
