--- a/trunk/plugins/remote/CMakeLists.txt
+++ b/trunk/plugins/remote/CMakeLists.txt
@@ -28,7 +28,7 @@ TARGET_LINK_LIBRARIES(remote simlib)
 SET_TARGET_PROPERTIES(remote PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS remote LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS remote LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
 #########################
 # next target - simctrl #
