--- a/trunk/plugins/replace/CMakeLists.txt
+++ b/trunk/plugins/replace/CMakeLists.txt
@@ -28,4 +28,4 @@ TARGET_LINK_LIBRARIES(replace simlib)
 SET_TARGET_PROPERTIES(replace PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS replace LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS replace LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
