--- a/trunk/plugins/sound/CMakeLists.txt
+++ b/trunk/plugins/sound/CMakeLists.txt
@@ -30,7 +30,7 @@ TARGET_LINK_LIBRARIES(sound simlib)
 SET_TARGET_PROPERTIES(sound PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS sound LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS sound LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 
 # install some sounds
 INSTALL(FILES sounds/alert.wav      DESTINATION ${SIM_SOUND_DIR})
