--- a/trunk/plugins/windock/CMakeLists.txt
+++ b/trunk/plugins/windock/CMakeLists.txt
@@ -22,7 +22,7 @@ IF(WIN32)
     SET_TARGET_PROPERTIES(windock PROPERTIES PREFIX "")
 
     # install target
-    INSTALL(TARGETS windock LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+    INSTALL(TARGETS windock LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 ELSE(WIN32)
     MESSAGE(STATUS "This plugin can only be used on windows")
 ENDIF(WIN32)
