--- a/trunk/plugins/yahoo/CMakeLists.txt
+++ b/trunk/plugins/yahoo/CMakeLists.txt
@@ -39,4 +39,4 @@ TARGET_LINK_LIBRARIES(yahoo simlib)
 SET_TARGET_PROPERTIES(yahoo PROPERTIES PREFIX "")
 
 # install target
-INSTALL(TARGETS yahoo LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+INSTALL(TARGETS yahoo LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
