Fix styles destination.

--- a/trunk/plugins/_core/styles/CMakeLists.txt
+++ b/trunk/plugins/_core/styles/CMakeLists.txt
@@ -2,4 +2,4 @@
 
 FILE(GLOB styles *.xsl)
 
-INSTALL(FILES ${styles} DESTINATION ${CMAKE_INSTALL_PREFIX}/styles)
+INSTALL(FILES ${styles} DESTINATION ${SIM_STYLES_DIR})
