Fix UNIX files placement.
Now cmake -DCMAKE_INSTALL_PREFIX=/usr -DLIBDIR=/usr/lib64 works correctly.

--- a/trunk/plugins/remote/CMakeLists.txt
+++ b/trunk/plugins/remote/CMakeLists.txt
@@ -36,7 +36,7 @@ INSTALL(TARGETS remote LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATIO
 
 ADD_EXECUTABLE(simctrl simctrl.cpp)
 TARGET_LINK_LIBRARIES(simctrl simlib)
-INSTALL(TARGETS simctrl RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
+INSTALL(TARGETS simctrl RUNTIME DESTINATION ${BINDIR})
 
 IF(0)
 #doesn't work yet
