--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -107,7 +107,7 @@ IF(WIN32)
 ENDIF(WIN32)
 
 # set correct install path
-INSTALL(TARGETS simlib LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
+INSTALL(TARGETS simlib LIBRARY DESTINATION ${LIBDIR} RUNTIME DESTINATION ${LIBDIR})
 
 ##################
 # sim executable #
@@ -120,4 +120,4 @@ ADD_EXECUTABLE(sim WIN32 sim.cpp sim.rc)
 TARGET_LINK_LIBRARIES(sim simlib ${QT_QTMAIN_LIBRARY})
 
 # set correct install path
-INSTALL(TARGETS sim RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
+INSTALL(TARGETS sim RUNTIME DESTINATION ${BINDIR})
