--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -67,12 +67,26 @@ if(MSVC)
   endif(CMAKE_COMPILER_2005)
 endif(MSVC)
 
-SET(SIM_ICONS_DIR  icons)
-SET(SIM_PICT_DIR   pict)
-SET(SIM_PLUGIN_DIR plugins)
-SET(SIM_I18N_DIR   po)
-SET(SIM_SOUND_DIR  sounds)
-SET(SIM_STYLES_DIR styles)
+if(WIN32)
+	SET(LIBDIR ${CMAKE_INSTALL_PREFIX})
+	SET(BINDIR ${CMAKE_INSTALL_PREFIX})
+	SET(SIM_ICONS_DIR  icons)
+	SET(SIM_PICT_DIR   pict)
+	SET(SIM_PLUGIN_DIR plugins)
+	SET(SIM_I18N_DIR   po)
+	SET(SIM_SOUND_DIR  sounds)
+	SET(SIM_STYLES_DIR styles)
+else(WIN32)
+	SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/lib CACHE PATH "Path to sim library")
+	SET(BINDIR ${CMAKE_INSTALL_PREFIX}/bin CACHE PATH "Path to sim binary")
+	SET(DATADIR ${CMAKE_INSTALL_PREFIX}/share/apps/sim CACHE PATH "Path to sim data")
+	SET(SIM_PLUGIN_DIR ${LIBDIR}/sim CACHE PATH "Path to sim plugins")
+	SET(SIM_ICONS_DIR ${DATADIR}/icons)
+	SET(SIM_PICT_DIR ${DATADIR}/pict)
+	SET(SIM_SOUND_DIR ${DATADIR}/sounds)
+	SET(SIM_STYLES_DIR ${DATADIR}/styles)
+endif(WIN32)	
+	
 
 # subdirectories
 ADD_SUBDIRECTORY(sim)
