Added "SIM Flavour" option to allow parallel installation of more than one version of sim. This can be used, for example, for making variants with and without KDE.
Flavour is the suffix added to sim executable and library, and also to plugin dir.

For example cmake -DSIM_FLAVOUR="-qt"
This will build sim executable as sim-qt, sim library as libsim-qt.so, and 
place plugins to /usr/local/lib/sim-qt.

Another application of this patch:
cmake -DSIM_FLAVOUR="-stable" will allow you to have "stable" release in system, 
together with "unstable" variant built from freshly checked out sources.
You can launch sim or sim-stable executables.

Data files (styles, icons, sounds) are still common for parallel installations though.

TODO: do not forget about  /usr/share/applications/sim${SIM_FLAVOUR}.desktop

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -67,6 +67,7 @@ if(MSVC)
   endif(CMAKE_COMPILER_2005)
 endif(MSVC)
 
+SET(SIM_FLAVOUR "" CACHE STRING "Additional suffix for plugin dir and executable file")
 if(WIN32)
 	SET(LIBDIR ${CMAKE_INSTALL_PREFIX})
 	SET(BINDIR ${CMAKE_INSTALL_PREFIX})
@@ -80,7 +81,7 @@ else(WIN32)
 	SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/lib CACHE PATH "Path to sim library")
 	SET(BINDIR ${CMAKE_INSTALL_PREFIX}/bin CACHE PATH "Path to sim binary")
 	SET(DATADIR ${CMAKE_INSTALL_PREFIX}/share/apps/sim CACHE PATH "Path to sim data")
-	SET(SIM_PLUGIN_DIR ${LIBDIR}/sim CACHE PATH "Path to sim plugins")
+	SET(SIM_PLUGIN_DIR ${LIBDIR}/sim${SIM_FLAVOUR} CACHE PATH "Path to sim plugins")
 	SET(SIM_ICONS_DIR ${DATADIR}/icons)
 	SET(SIM_PICT_DIR ${DATADIR}/pict)
 	SET(SIM_SOUND_DIR ${DATADIR}/sounds)
