--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -54,7 +54,7 @@ ADD_LIBRARY(simlib SHARED ${sim_LIB_SRCS})
 IF(WIN32)
     SET_TARGET_PROPERTIES(simlib PROPERTIES VERSION 0.0.0 SOVERSION 0)
 ELSE(WIN32)
-    SET_TARGET_PROPERTIES(simlib PROPERTIES OUTPUT_NAME sim VERSION 0.0.0 SOVERSION 0)
+    SET_TARGET_PROPERTIES(simlib PROPERTIES OUTPUT_NAME sim${SIM_FLAVOUR} VERSION 0.0.0 SOVERSION 0)
 ENDIF(WIN32)
 
 #some needed defines
@@ -121,3 +121,5 @@ TARGET_LINK_LIBRARIES(sim simlib ${QT_QTMAIN_LIBRARY})
 
 # set correct install path
 INSTALL(TARGETS sim RUNTIME DESTINATION ${BINDIR})
+
+SET_TARGET_PROPERTIES(sim PROPERTIES OUTPUT_NAME sim${SIM_FLAVOUR})
