--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -66,25 +66,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 # openssl is optional
 if(OPENSSL_FOUND)
   INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
-  TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES})
-  # we need libeay here too...
-  # FIXME: move this somehow to FindOpenSSL.cmake...
-  IF(WIN32)
-    IF(MSVC)
-      IF(MSVC_IDE)
-        TARGET_LINK_LIBRARIES(simlib optimized libeay32MD debug libeay32MDd)
-      ELSE(MSVC_IDE)
-        STRING(TOLOWER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE_TOLOWER)
-       IF(CMAKE_BUILD_TYPE_TOLOWER MATCHES debug)
-          TARGET_LINK_LIBRARIES(simlib libeay32MDd)
-        ELSE(CMAKE_BUILD_TYPE_TOLOWER MATCHES debug)
-          TARGET_LINK_LIBRARIES(simlib libeay32MD)
-        ENDIF(CMAKE_BUILD_TYPE_TOLOWER MATCHES debug)
-      ENDIF(MSVC_IDE)
-    ELSE(MSVC)
-      TARGET_LINK_LIBRARIES(simlib libeay32)
-    ENDIF(MSVC)
-  ENDIF(WIN32)
+  TARGET_LINK_LIBRARIES(simlib ${OPENSSL_LIBRARIES} ${OPENSSL_EAY_LIBRARIES})
 endif(OPENSSL_FOUND)
 
 IF(USE_KDE3)
