--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -88,7 +88,7 @@ else(WIN32)
 	SET(SIM_PICT_DIR ${DATADIR}/pict)
 	SET(SIM_SOUND_DIR ${DATADIR}/sounds)
 	SET(SIM_STYLES_DIR ${DATADIR}/styles)
-	SET(SIM_I18N_DIR   po)              # FIXME!
+	SET(SIM_I18N_DIR   ${CMAKE_INSTALL_PREFIX}/share/locale)
 endif(WIN32)	
 	
 # subdirectories
